// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SparkBar 25 data points 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={49.45054945054945}
    width={5.44}
    x={0}
    y={40.54945054945055}
  />
  <rect
    fill="#2ebd59"
    height={79.12087912087912}
    width={5.44}
    x={6.44}
    y={10.879120879120876}
  />
  <rect
    fill="#2ebd59"
    height={87.03296703296704}
    width={5.44}
    x={12.88}
    y={2.9670329670329636}
  />
  <rect
    fill="#2ebd59"
    height={31.64835164835165}
    width={5.44}
    x={19.32}
    y={58.35164835164835}
  />
  <rect
    fill="#2ebd59"
    height={51.42857142857142}
    width={5.44}
    x={25.76}
    y={38.57142857142858}
  />
  <rect
    fill="#2ebd59"
    height={48.46153846153846}
    width={5.44}
    x={32.2}
    y={41.53846153846154}
  />
  <rect
    fill="#2ebd59"
    height={87.03296703296704}
    width={5.44}
    x={38.64}
    y={2.9670329670329636}
  />
  <rect
    fill="#2ebd59"
    height={71.20879120879121}
    width={5.44}
    x={45.080000000000005}
    y={18.79120879120879}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={5.44}
    x={51.52}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height={48.46153846153846}
    width={5.44}
    x={57.96}
    y={41.53846153846154}
  />
  <rect
    fill="#2ebd59"
    height={62.30769230769231}
    width={5.44}
    x={64.4}
    y={27.692307692307693}
  />
  <rect
    fill="#2ebd59"
    height={41.53846153846154}
    width={5.44}
    x={70.84}
    y={48.46153846153846}
  />
  <rect
    fill="#2ebd59"
    height={10.87912087912088}
    width={5.44}
    x={77.28}
    y={79.12087912087912}
  />
  <rect
    fill="#2ebd59"
    height={11.868131868131869}
    width={5.44}
    x={83.72}
    y={78.13186813186813}
  />
  <rect
    fill="#2ebd59"
    height={25.71428571428571}
    width={5.44}
    x={90.16000000000001}
    y={64.28571428571429}
  />
  <rect
    fill="#2ebd59"
    height={56.37362637362637}
    width={5.44}
    x={96.60000000000001}
    y={33.62637362637363}
  />
  <rect
    fill="#2ebd59"
    height={31.64835164835165}
    width={5.44}
    x={103.04}
    y={58.35164835164835}
  />
  <rect
    fill="#2ebd59"
    height={18.791208791208792}
    width={5.44}
    x={109.48}
    y={71.20879120879121}
  />
  <rect
    fill="#2ebd59"
    height={73.18681318681318}
    width={5.44}
    x={115.92}
    y={16.813186813186817}
  />
  <rect
    fill="#2ebd59"
    height={10.87912087912088}
    width={5.44}
    x={122.36000000000001}
    y={79.12087912087912}
  />
  <rect
    fill="#2ebd59"
    height={63.2967032967033}
    width={5.44}
    x={128.8}
    y={26.7032967032967}
  />
  <rect
    fill="#2ebd59"
    height={75.16483516483517}
    width={5.44}
    x={135.24}
    y={14.835164835164832}
  />
  <rect
    fill="#2ebd59"
    height={87.03296703296704}
    width={5.44}
    x={141.68}
    y={2.9670329670329636}
  />
  <rect
    fill="#2ebd59"
    height={12.857142857142856}
    width={5.44}
    x={148.12}
    y={77.14285714285714}
  />
  <rect
    fill="#2ebd59"
    height={58.35164835164836}
    width={5.44}
    x={154.56}
    y={31.648351648351642}
  />
</svg>
`;

exports[`Storyshots SparkBar 50 data points 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={14.845360824742269}
    width={2.72}
    x={0}
    y={75.15463917525773}
  />
  <rect
    fill="#2ebd59"
    height={36.18556701030928}
    width={2.72}
    x={3.2097959183673472}
    y={53.81443298969072}
  />
  <rect
    fill="#2ebd59"
    height={59.381443298969074}
    width={2.72}
    x={6.4195918367346945}
    y={30.618556701030926}
  />
  <rect
    fill="#2ebd59"
    height={7.422680412371134}
    width={2.72}
    x={9.62938775510204}
    y={82.57731958762886}
  />
  <rect
    fill="#2ebd59"
    height={73.29896907216495}
    width={2.72}
    x={12.839183673469389}
    y={16.70103092783505}
  />
  <rect
    fill="#2ebd59"
    height={77.0103092783505}
    width={2.72}
    x={16.048979591836737}
    y={12.989690721649495}
  />
  <rect
    fill="#2ebd59"
    height={64.94845360824742}
    width={2.72}
    x={19.25877551020408}
    y={25.05154639175258}
  />
  <rect
    fill="#2ebd59"
    height={28.76288659793814}
    width={2.72}
    x={22.46857142857143}
    y={61.23711340206186}
  />
  <rect
    fill="#2ebd59"
    height={15.773195876288659}
    width={2.72}
    x={25.678367346938778}
    y={74.22680412371135}
  />
  <rect
    fill="#2ebd59"
    height={66.80412371134021}
    width={2.72}
    x={28.888163265306126}
    y={23.19587628865979}
  />
  <rect
    fill="#2ebd59"
    height={44.5360824742268}
    width={2.72}
    x={32.097959183673474}
    y={45.4639175257732}
  />
  <rect
    fill="#2ebd59"
    height={64.02061855670104}
    width={2.72}
    x={35.30775510204082}
    y={25.979381443298962}
  />
  <rect
    fill="#2ebd59"
    height={60.30927835051546}
    width={2.72}
    x={38.51755102040816}
    y={29.690721649484537}
  />
  <rect
    fill="#2ebd59"
    height={75.15463917525773}
    width={2.72}
    x={41.72734693877551}
    y={14.845360824742272}
  />
  <rect
    fill="#2ebd59"
    height={84.43298969072166}
    width={2.72}
    x={44.93714285714286}
    y={5.567010309278345}
  />
  <rect
    fill="#2ebd59"
    height={46.39175257731958}
    width={2.72}
    x={48.14693877551021}
    y={43.60824742268042}
  />
  <rect
    fill="#2ebd59"
    height={88.14432989690721}
    width={2.72}
    x={51.356734693877556}
    y={1.8556701030927911}
  />
  <rect
    fill="#2ebd59"
    height={89.0721649484536}
    width={2.72}
    x={54.566530612244904}
    y={0.9278350515463956}
  />
  <rect
    fill="#2ebd59"
    height={37.113402061855666}
    width={2.72}
    x={57.77632653061225}
    y={52.886597938144334}
  />
  <rect
    fill="#2ebd59"
    height={33.402061855670105}
    width={2.72}
    x={60.9861224489796}
    y={56.597938144329895}
  />
  <rect
    fill="#2ebd59"
    height={83.50515463917526}
    width={2.72}
    x={64.19591836734695}
    y={6.4948453608247405}
  />
  <rect
    fill="#2ebd59"
    height={23.19587628865979}
    width={2.72}
    x={67.4057142857143}
    y={66.80412371134021}
  />
  <rect
    fill="#2ebd59"
    height={73.29896907216495}
    width={2.72}
    x={70.61551020408164}
    y={16.70103092783505}
  />
  <rect
    fill="#2ebd59"
    height={55.670103092783506}
    width={2.72}
    x={73.82530612244899}
    y={34.329896907216494}
  />
  <rect
    fill="#2ebd59"
    height={38.04123711340206}
    width={2.72}
    x={77.03510204081633}
    y={51.95876288659794}
  />
  <rect
    fill="#2ebd59"
    height={17.628865979381445}
    width={2.72}
    x={80.24489795918367}
    y={72.37113402061856}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={2.72}
    x={83.45469387755102}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height={43.608247422680414}
    width={2.72}
    x={86.66448979591837}
    y={46.391752577319586}
  />
  <rect
    fill="#2ebd59"
    height={32.47422680412371}
    width={2.72}
    x={89.87428571428572}
    y={57.52577319587629}
  />
  <rect
    fill="#2ebd59"
    height={17.628865979381445}
    width={2.72}
    x={93.08408163265307}
    y={72.37113402061856}
  />
  <rect
    fill="#2ebd59"
    height={33.402061855670105}
    width={2.72}
    x={96.29387755102042}
    y={56.597938144329895}
  />
  <rect
    fill="#2ebd59"
    height={66.80412371134021}
    width={2.72}
    x={99.50367346938776}
    y={23.19587628865979}
  />
  <rect
    fill="#2ebd59"
    height={19.48453608247423}
    width={2.72}
    x={102.71346938775511}
    y={70.51546391752578}
  />
  <rect
    fill="#2ebd59"
    height={52.886597938144334}
    width={2.72}
    x={105.92326530612246}
    y={37.113402061855666}
  />
  <rect
    fill="#2ebd59"
    height={89.0721649484536}
    width={2.72}
    x={109.13306122448981}
    y={0.9278350515463956}
  />
  <rect
    fill="#2ebd59"
    height={85.36082474226804}
    width={2.72}
    x={112.34285714285716}
    y={4.639175257731964}
  />
  <rect
    fill="#2ebd59"
    height={46.39175257731958}
    width={2.72}
    x={115.5526530612245}
    y={43.60824742268042}
  />
  <rect
    fill="#2ebd59"
    height={83.50515463917526}
    width={2.72}
    x={118.76244897959185}
    y={6.4948453608247405}
  />
  <rect
    fill="#2ebd59"
    height={27.835051546391753}
    width={2.72}
    x={121.9722448979592}
    y={62.16494845360825}
  />
  <rect
    fill="#2ebd59"
    height={67.73195876288659}
    width={2.72}
    x={125.18204081632655}
    y={22.268041237113408}
  />
  <rect
    fill="#2ebd59"
    height={36.18556701030928}
    width={2.72}
    x={128.3918367346939}
    y={53.81443298969072}
  />
  <rect
    fill="#2ebd59"
    height={58.453608247422686}
    width={2.72}
    x={131.60163265306124}
    y={31.546391752577314}
  />
  <rect
    fill="#2ebd59"
    height={14.845360824742269}
    width={2.72}
    x={134.8114285714286}
    y={75.15463917525773}
  />
  <rect
    fill="#2ebd59"
    height={79.79381443298969}
    width={2.72}
    x={138.02122448979594}
    y={10.206185567010309}
  />
  <rect
    fill="#2ebd59"
    height={78.8659793814433}
    width={2.72}
    x={141.2310204081633}
    y={11.134020618556704}
  />
  <rect
    fill="#2ebd59"
    height={35.25773195876289}
    width={2.72}
    x={144.44081632653064}
    y={54.74226804123711}
  />
  <rect
    fill="#2ebd59"
    height={74.22680412371133}
    width={2.72}
    x={147.65061224489799}
    y={15.773195876288668}
  />
  <rect
    fill="#2ebd59"
    height={11.1340206185567}
    width={2.72}
    x={150.86040816326533}
    y={78.8659793814433}
  />
  <rect
    fill="#2ebd59"
    height={38.96907216494846}
    width={2.72}
    x={154.07020408163265}
    y={51.03092783505154}
  />
  <rect
    fill="#2ebd59"
    height={6.494845360824741}
    width={2.72}
    x={157.28}
    y={83.50515463917526}
  />
</svg>
`;

exports[`Storyshots SparkBar 50 large 1`] = `
<svg
  height="500"
  width="800"
>
  <rect
    fill="#2ebd59"
    height="82.47422680412372"
    width={13.6}
    x={0}
    y={417.5257731958763}
  />
  <rect
    fill="#2ebd59"
    height="201.03092783505156"
    width={13.6}
    x={16.048979591836734}
    y={298.96907216494844}
  />
  <rect
    fill="#2ebd59"
    height="329.89690721649487"
    width={13.6}
    x={32.09795918367347}
    y={170.10309278350513}
  />
  <rect
    fill="#2ebd59"
    height="41.23711340206186"
    width={13.6}
    x={48.1469387755102}
    y={458.7628865979381}
  />
  <rect
    fill="#2ebd59"
    height="407.21649484536084"
    width={13.6}
    x={64.19591836734693}
    y={92.78350515463916}
  />
  <rect
    fill="#2ebd59"
    height="427.83505154639175"
    width={13.6}
    x={80.24489795918367}
    y={72.16494845360825}
  />
  <rect
    fill="#2ebd59"
    height="360.82474226804123"
    width={13.6}
    x={96.2938775510204}
    y={139.17525773195877}
  />
  <rect
    fill="#2ebd59"
    height="159.79381443298968"
    width={13.6}
    x={112.34285714285713}
    y={340.2061855670103}
  />
  <rect
    fill="#2ebd59"
    height="87.62886597938143"
    width={13.6}
    x={128.39183673469387}
    y={412.37113402061857}
  />
  <rect
    fill="#2ebd59"
    height="371.1340206185567"
    width={13.6}
    x={144.4408163265306}
    y={128.8659793814433}
  />
  <rect
    fill="#2ebd59"
    height="247.42268041237114"
    width={13.6}
    x={160.48979591836735}
    y={252.57731958762886}
  />
  <rect
    fill="#2ebd59"
    height="355.6701030927835"
    width={13.6}
    x={176.53877551020406}
    y={144.3298969072165}
  />
  <rect
    fill="#2ebd59"
    height="335.05154639175254"
    width={13.6}
    x={192.5877551020408}
    y={164.94845360824746}
  />
  <rect
    fill="#2ebd59"
    height="417.5257731958763"
    width={13.6}
    x={208.63673469387754}
    y={82.4742268041237}
  />
  <rect
    fill="#2ebd59"
    height="469.07216494845363"
    width={13.6}
    x={224.68571428571425}
    y={30.927835051546367}
  />
  <rect
    fill="#2ebd59"
    height="257.73195876288656"
    width={13.6}
    x={240.734693877551}
    y={242.26804123711344}
  />
  <rect
    fill="#2ebd59"
    height="489.69072164948454"
    width={13.6}
    x={256.78367346938774}
    y={10.309278350515456}
  />
  <rect
    fill="#2ebd59"
    height="494.8453608247423"
    width={13.6}
    x={272.83265306122445}
    y={5.154639175257728}
  />
  <rect
    fill="#2ebd59"
    height="206.18556701030926"
    width={13.6}
    x={288.8816326530612}
    y={293.8144329896908}
  />
  <rect
    fill="#2ebd59"
    height="185.56701030927834"
    width={13.6}
    x={304.93061224489793}
    y={314.4329896907217}
  />
  <rect
    fill="#2ebd59"
    height="463.9175257731959"
    width={13.6}
    x={320.9795918367347}
    y={36.082474226804095}
  />
  <rect
    fill="#2ebd59"
    height="128.86597938144328"
    width={13.6}
    x={337.0285714285714}
    y={371.13402061855675}
  />
  <rect
    fill="#2ebd59"
    height="407.21649484536084"
    width={13.6}
    x={353.0775510204081}
    y={92.78350515463916}
  />
  <rect
    fill="#2ebd59"
    height="309.27835051546396"
    width={13.6}
    x={369.1265306122449}
    y={190.72164948453604}
  />
  <rect
    fill="#2ebd59"
    height="211.340206185567"
    width={13.6}
    x={385.1755102040816}
    y={288.659793814433}
  />
  <rect
    fill="#2ebd59"
    height="97.9381443298969"
    width={13.6}
    x={401.2244897959183}
    y={402.0618556701031}
  />
  <rect
    fill="#2ebd59"
    height="500"
    width={13.6}
    x={417.2734693877551}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height="242.2680412371134"
    width={13.6}
    x={433.3224489795918}
    y={257.7319587628866}
  />
  <rect
    fill="#2ebd59"
    height="180.41237113402062"
    width={13.6}
    x={449.3714285714285}
    y={319.58762886597935}
  />
  <rect
    fill="#2ebd59"
    height="97.9381443298969"
    width={13.6}
    x={465.4204081632653}
    y={402.0618556701031}
  />
  <rect
    fill="#2ebd59"
    height="185.56701030927834"
    width={13.6}
    x={481.469387755102}
    y={314.4329896907217}
  />
  <rect
    fill="#2ebd59"
    height="371.1340206185567"
    width={13.6}
    x={497.51836734693876}
    y={128.8659793814433}
  />
  <rect
    fill="#2ebd59"
    height="108.24742268041237"
    width={13.6}
    x={513.5673469387755}
    y={391.75257731958766}
  />
  <rect
    fill="#2ebd59"
    height="293.8144329896907"
    width={13.6}
    x={529.6163265306122}
    y={206.18556701030928}
  />
  <rect
    fill="#2ebd59"
    height="494.8453608247423"
    width={13.6}
    x={545.6653061224489}
    y={5.154639175257728}
  />
  <rect
    fill="#2ebd59"
    height="474.2268041237113"
    width={13.6}
    x={561.7142857142857}
    y={25.773195876288696}
  />
  <rect
    fill="#2ebd59"
    height="257.73195876288656"
    width={13.6}
    x={577.7632653061224}
    y={242.26804123711344}
  />
  <rect
    fill="#2ebd59"
    height="463.9175257731959"
    width={13.6}
    x={593.8122448979591}
    y={36.082474226804095}
  />
  <rect
    fill="#2ebd59"
    height="154.63917525773198"
    width={13.6}
    x={609.8612244897959}
    y={345.36082474226805}
  />
  <rect
    fill="#2ebd59"
    height="376.2886597938144"
    width={13.6}
    x={625.9102040816326}
    y={123.71134020618558}
  />
  <rect
    fill="#2ebd59"
    height="201.03092783505156"
    width={13.6}
    x={641.9591836734694}
    y={298.96907216494844}
  />
  <rect
    fill="#2ebd59"
    height="324.74226804123714"
    width={13.6}
    x={658.008163265306}
    y={175.25773195876286}
  />
  <rect
    fill="#2ebd59"
    height="82.47422680412372"
    width={13.6}
    x={674.0571428571428}
    y={417.5257731958763}
  />
  <rect
    fill="#2ebd59"
    height="443.29896907216494"
    width={13.6}
    x={690.1061224489796}
    y={56.70103092783506}
  />
  <rect
    fill="#2ebd59"
    height="438.1443298969072"
    width={13.6}
    x={706.1551020408162}
    y={61.85567010309279}
  />
  <rect
    fill="#2ebd59"
    height="195.8762886597938"
    width={13.6}
    x={722.204081632653}
    y={304.1237113402062}
  />
  <rect
    fill="#2ebd59"
    height="412.3711340206185"
    width={13.6}
    x={738.2530612244898}
    y={87.62886597938149}
  />
  <rect
    fill="#2ebd59"
    height="61.855670103092784"
    width={13.6}
    x={754.3020408163264}
    y={438.1443298969072}
  />
  <rect
    fill="#2ebd59"
    height="216.49484536082474"
    width={13.6}
    x={770.3510204081632}
    y={283.50515463917526}
  />
  <rect
    fill="#2ebd59"
    height="36.08247422680412"
    width={13.6}
    x={786.4}
    y={463.91752577319585}
  />
</svg>
`;

exports[`Storyshots SparkBar Coral color 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="coral"
    height={56.276429130775256}
    width={10.461538461538462}
    x={0}
    y={33.723570869224744}
  />
  <rect
    fill="coral"
    height={58.496476115896634}
    width={10.461538461538462}
    x={12.461538461538462}
    y={31.503523884103366}
  />
  <rect
    fill="coral"
    height={58.60219263899766}
    width={10.461538461538462}
    x={24.923076923076923}
    y={31.397807361002343}
  />
  <rect
    fill="coral"
    height={57.79169929522318}
    width={10.461538461538462}
    x={37.38461538461539}
    y={32.20830070477682}
  />
  <rect
    fill="coral"
    height={77.17306186374314}
    width={10.461538461538462}
    x={49.84615384615385}
    y={12.826938136256857}
  />
  <rect
    fill="coral"
    height={82.52936570086139}
    width={10.461538461538462}
    x={62.30769230769231}
    y={7.470634299138609}
  />
  <rect
    fill="coral"
    height={83.51605324980423}
    width={10.461538461538462}
    x={74.76923076923077}
    y={6.48394675019577}
  />
  <rect
    fill="coral"
    height={90}
    width={10.461538461538462}
    x={87.23076923076923}
    y={0}
  />
  <rect
    fill="coral"
    height={83.79796397807361}
    width={10.461538461538462}
    x={99.6923076923077}
    y={6.202036021926389}
  />
  <rect
    fill="coral"
    height={79.0407204385278}
    width={10.461538461538462}
    x={112.15384615384616}
    y={10.9592795614722}
  />
  <rect
    fill="coral"
    height={83.02270947533282}
    width={10.461538461538462}
    x={124.61538461538461}
    y={6.977290524667183}
  />
  <rect
    fill="coral"
    height={87.4275646045419}
    width={10.461538461538462}
    x={137.07692307692307}
    y={2.5724353954581005}
  />
  <rect
    fill="coral"
    height={36.190289741581836}
    width={10.461538461538462}
    x={149.53846153846155}
    y={53.809710258418164}
  />
</svg>
`;

exports[`Storyshots SparkBar Empty array 1`] = `
<svg
  height={90}
  width={160}
/>
`;

exports[`Storyshots SparkBar No props 1`] = `
<svg
  height={90}
  width={160}
/>
`;

exports[`Storyshots SparkBar Pass regular data 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={56.276429130775256}
    width={10.461538461538462}
    x={0}
    y={33.723570869224744}
  />
  <rect
    fill="#2ebd59"
    height={58.496476115896634}
    width={10.461538461538462}
    x={12.461538461538462}
    y={31.503523884103366}
  />
  <rect
    fill="#2ebd59"
    height={58.60219263899766}
    width={10.461538461538462}
    x={24.923076923076923}
    y={31.397807361002343}
  />
  <rect
    fill="#2ebd59"
    height={57.79169929522318}
    width={10.461538461538462}
    x={37.38461538461539}
    y={32.20830070477682}
  />
  <rect
    fill="#2ebd59"
    height={77.17306186374314}
    width={10.461538461538462}
    x={49.84615384615385}
    y={12.826938136256857}
  />
  <rect
    fill="#2ebd59"
    height={82.52936570086139}
    width={10.461538461538462}
    x={62.30769230769231}
    y={7.470634299138609}
  />
  <rect
    fill="#2ebd59"
    height={83.51605324980423}
    width={10.461538461538462}
    x={74.76923076923077}
    y={6.48394675019577}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={10.461538461538462}
    x={87.23076923076923}
    y={0}
  />
  <rect
    fill="#2ebd59"
    height={83.79796397807361}
    width={10.461538461538462}
    x={99.6923076923077}
    y={6.202036021926389}
  />
  <rect
    fill="#2ebd59"
    height={79.0407204385278}
    width={10.461538461538462}
    x={112.15384615384616}
    y={10.9592795614722}
  />
  <rect
    fill="#2ebd59"
    height={83.02270947533282}
    width={10.461538461538462}
    x={124.61538461538461}
    y={6.977290524667183}
  />
  <rect
    fill="#2ebd59"
    height={87.4275646045419}
    width={10.461538461538462}
    x={137.07692307692307}
    y={2.5724353954581005}
  />
  <rect
    fill="#2ebd59"
    height={36.190289741581836}
    width={10.461538461538462}
    x={149.53846153846155}
    y={53.809710258418164}
  />
</svg>
`;

exports[`Storyshots SparkBar Two data points 1`] = `
<svg
  height={90}
  width={160}
>
  <rect
    fill="#2ebd59"
    height={30}
    width={68}
    x={0}
    y={60}
  />
  <rect
    fill="#2ebd59"
    height={90}
    width={68}
    x={92}
    y={0}
  />
</svg>
`;

exports[`Storyshots SuperSpark 25 data points 1`] = `
<div>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <rect
          fill="#2ebd59"
          height={43.956043956043956}
          width={5.1}
          x={0}
          y={36.043956043956044}
        />
        <rect
          fill="#2ebd59"
          height={70.32967032967034}
          width={5.1}
          x={6.0375}
          y={9.670329670329664}
        />
        <rect
          fill="#2ebd59"
          height={77.36263736263736}
          width={5.1}
          x={12.075}
          y={2.637362637362642}
        />
        <rect
          fill="#2ebd59"
          height={28.13186813186813}
          width={5.1}
          x={18.112499999999997}
          y={51.86813186813187}
        />
        <rect
          fill="#2ebd59"
          height={45.71428571428571}
          width={5.1}
          x={24.15}
          y={34.28571428571429}
        />
        <rect
          fill="#2ebd59"
          height={43.07692307692307}
          width={5.1}
          x={30.1875}
          y={36.92307692307693}
        />
        <rect
          fill="#2ebd59"
          height={77.36263736263736}
          width={5.1}
          x={36.224999999999994}
          y={2.637362637362642}
        />
        <rect
          fill="#2ebd59"
          height={63.29670329670329}
          width={5.1}
          x={42.262499999999996}
          y={16.703296703296708}
        />
        <rect
          fill="#2ebd59"
          height={80}
          width={5.1}
          x={48.3}
          y={0}
        />
        <rect
          fill="#2ebd59"
          height={43.07692307692307}
          width={5.1}
          x={54.3375}
          y={36.92307692307693}
        />
        <rect
          fill="#2ebd59"
          height={55.38461538461539}
          width={5.1}
          x={60.375}
          y={24.615384615384613}
        />
        <rect
          fill="#2ebd59"
          height={36.92307692307693}
          width={5.1}
          x={66.4125}
          y={43.07692307692307}
        />
        <rect
          fill="#2ebd59"
          height={9.670329670329664}
          width={5.1}
          x={72.44999999999999}
          y={70.32967032967034}
        />
        <rect
          fill="#2ebd59"
          height={10.549450549450555}
          width={5.1}
          x={78.4875}
          y={69.45054945054945}
        />
        <rect
          fill="#2ebd59"
          height={22.857142857142854}
          width={5.1}
          x={84.52499999999999}
          y={57.142857142857146}
        />
        <rect
          fill="#2ebd59"
          height={50.10989010989011}
          width={5.1}
          x={90.5625}
          y={29.89010989010989}
        />
        <rect
          fill="#2ebd59"
          height={28.13186813186813}
          width={5.1}
          x={96.6}
          y={51.86813186813187}
        />
        <rect
          fill="#2ebd59"
          height={16.7032967032967}
          width={5.1}
          x={102.63749999999999}
          y={63.2967032967033}
        />
        <rect
          fill="#2ebd59"
          height={65.05494505494505}
          width={5.1}
          x={108.675}
          y={14.945054945054949}
        />
        <rect
          fill="#2ebd59"
          height={9.670329670329664}
          width={5.1}
          x={114.71249999999999}
          y={70.32967032967034}
        />
        <rect
          fill="#2ebd59"
          height={56.26373626373627}
          width={5.1}
          x={120.75}
          y={23.73626373626373}
        />
        <rect
          fill="#2ebd59"
          height={66.81318681318682}
          width={5.1}
          x={126.7875}
          y={13.186813186813183}
        />
        <rect
          fill="#2ebd59"
          height={77.36263736263736}
          width={5.1}
          x={132.825}
          y={2.637362637362642}
        />
        <rect
          fill="#2ebd59"
          height={11.42857142857143}
          width={5.1}
          x={138.86249999999998}
          y={68.57142857142857}
        />
        <rect
          fill="#2ebd59"
          height={51.86813186813187}
          width={5.1}
          x={144.89999999999998}
          y={28.13186813186813}
        />
      </g>
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,36.043956043956044L6.25,9.670329670329664L12.5,2.637362637362642L18.75,51.86813186813187L25,34.28571428571429L31.25,36.92307692307693L37.5,2.637362637362642L43.75,16.703296703296708L50,0L56.25,36.92307692307693L62.5,24.615384615384613L68.75,43.07692307692307L75,70.32967032967034L81.25,69.45054945054945L87.5,57.142857142857146L93.75,29.89010989010989L100,51.86813186813187L106.25,63.2967032967033L112.5,14.945054945054949L118.75,70.32967032967034L125,23.73626373626373L131.25,13.186813186813183L137.5,2.637362637362642L143.75,68.57142857142857L150,28.13186813186813L150,90L143.75,90L137.5,90L131.25,90L125,90L118.75,90L112.5,90L106.25,90L100,90L93.75,90L87.5,90L81.25,90L75,90L68.75,90L62.5,90L56.25,90L50,90L43.75,90L37.5,90L31.25,90L25,90L18.75,90L12.5,90L6.25,90L0,90Z"
        fill="#2ebd59"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,36.043956043956044L6.25,9.670329670329664L12.5,2.637362637362642L18.75,51.86813186813187L25,34.28571428571429L31.25,36.92307692307693L37.5,2.637362637362642L43.75,16.703296703296708L50,0L56.25,36.92307692307693L62.5,24.615384615384613L68.75,43.07692307692307L75,70.32967032967034L81.25,69.45054945054945L87.5,57.142857142857146L93.75,29.89010989010989L100,51.86813186813187L106.25,63.2967032967033L112.5,14.945054945054949L118.75,70.32967032967034L125,23.73626373626373L131.25,13.186813186813183L137.5,2.637362637362642L143.75,68.57142857142857L150,28.13186813186813"
        fill="none"
        stroke="#2ebd59"
        strokeWidth="1.3"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <circle
          cx={0}
          cy={36.043956043956044}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={6.25}
          cy={9.670329670329664}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={12.5}
          cy={2.637362637362642}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={18.75}
          cy={51.86813186813187}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={25}
          cy={34.28571428571429}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={31.25}
          cy={36.92307692307693}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={37.5}
          cy={2.637362637362642}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={43.75}
          cy={16.703296703296708}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={50}
          cy={0}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={56.25}
          cy={36.92307692307693}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={62.5}
          cy={24.615384615384613}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={68.75}
          cy={43.07692307692307}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={75}
          cy={70.32967032967034}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={81.25}
          cy={69.45054945054945}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={87.5}
          cy={57.142857142857146}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={93.75}
          cy={29.89010989010989}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={100}
          cy={51.86813186813187}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={106.25}
          cy={63.2967032967033}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={112.5}
          cy={14.945054945054949}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={118.75}
          cy={70.32967032967034}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={125}
          cy={23.73626373626373}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={131.25}
          cy={13.186813186813183}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={137.5}
          cy={2.637362637362642}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={143.75}
          cy={68.57142857142857}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={150}
          cy={28.13186813186813}
          fill="#2ebd59"
          r="3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots SuperSpark 50 data points 1`] = `
<div>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <rect
          fill="#2ebd59"
          height={13.19587628865979}
          width={2.55}
          x={0}
          y={66.80412371134021}
        />
        <rect
          fill="#2ebd59"
          height={32.16494845360825}
          width={2.55}
          x={3.0091836734693875}
          y={47.83505154639175}
        />
        <rect
          fill="#2ebd59"
          height={52.78350515463917}
          width={2.55}
          x={6.018367346938775}
          y={27.216494845360828}
        />
        <rect
          fill="#2ebd59"
          height={6.597938144329902}
          width={2.55}
          x={9.027551020408163}
          y={73.4020618556701}
        />
        <rect
          fill="#2ebd59"
          height={65.15463917525773}
          width={2.55}
          x={12.03673469387755}
          y={14.845360824742272}
        />
        <rect
          fill="#2ebd59"
          height={68.45360824742268}
          width={2.55}
          x={15.045918367346937}
          y={11.546391752577321}
        />
        <rect
          fill="#2ebd59"
          height={57.7319587628866}
          width={2.55}
          x={18.055102040816326}
          y={22.2680412371134}
        />
        <rect
          fill="#2ebd59"
          height={25.567010309278345}
          width={2.55}
          x={21.064285714285713}
          y={54.432989690721655}
        />
        <rect
          fill="#2ebd59"
          height={14.020618556701038}
          width={2.55}
          x={24.0734693877551}
          y={65.97938144329896}
        />
        <rect
          fill="#2ebd59"
          height={59.381443298969074}
          width={2.55}
          x={27.082653061224487}
          y={20.618556701030926}
        />
        <rect
          fill="#2ebd59"
          height={39.58762886597938}
          width={2.55}
          x={30.091836734693874}
          y={40.41237113402062}
        />
        <rect
          fill="#2ebd59"
          height={56.907216494845365}
          width={2.55}
          x={33.101020408163265}
          y={23.092783505154635}
        />
        <rect
          fill="#2ebd59"
          height={53.60824742268041}
          width={2.55}
          x={36.11020408163265}
          y={26.391752577319593}
        />
        <rect
          fill="#2ebd59"
          height={66.80412371134021}
          width={2.55}
          x={39.11938775510204}
          y={13.19587628865979}
        />
        <rect
          fill="#2ebd59"
          height={75.05154639175258}
          width={2.55}
          x={42.128571428571426}
          y={4.948453608247419}
        />
        <rect
          fill="#2ebd59"
          height={41.23711340206185}
          width={2.55}
          x={45.13775510204081}
          y={38.76288659793815}
        />
        <rect
          fill="#2ebd59"
          height={78.35051546391752}
          width={2.55}
          x={48.1469387755102}
          y={1.6494845360824826}
        />
        <rect
          fill="#2ebd59"
          height={79.17525773195877}
          width={2.55}
          x={51.15612244897959}
          y={0.8247422680412342}
        />
        <rect
          fill="#2ebd59"
          height={32.98969072164948}
          width={2.55}
          x={54.165306122448975}
          y={47.01030927835052}
        />
        <rect
          fill="#2ebd59"
          height={29.690721649484537}
          width={2.55}
          x={57.17448979591836}
          y={50.30927835051546}
        />
        <rect
          fill="#2ebd59"
          height={74.22680412371135}
          width={2.55}
          x={60.18367346938775}
          y={5.7731958762886535}
        />
        <rect
          fill="#2ebd59"
          height={20.618556701030926}
          width={2.55}
          x={63.192857142857136}
          y={59.381443298969074}
        />
        <rect
          fill="#2ebd59"
          height={65.15463917525773}
          width={2.55}
          x={66.20204081632653}
          y={14.845360824742272}
        />
        <rect
          fill="#2ebd59"
          height={49.48453608247423}
          width={2.55}
          x={69.21122448979591}
          y={30.51546391752577}
        />
        <rect
          fill="#2ebd59"
          height={33.81443298969072}
          width={2.55}
          x={72.2204081632653}
          y={46.18556701030928}
        />
        <rect
          fill="#2ebd59"
          height={15.670103092783506}
          width={2.55}
          x={75.22959183673468}
          y={64.3298969072165}
        />
        <rect
          fill="#2ebd59"
          height={80}
          width={2.55}
          x={78.23877551020408}
          y={0}
        />
        <rect
          fill="#2ebd59"
          height={38.76288659793814}
          width={2.55}
          x={81.24795918367346}
          y={41.23711340206186}
        />
        <rect
          fill="#2ebd59"
          height={28.865979381443296}
          width={2.55}
          x={84.25714285714285}
          y={51.134020618556704}
        />
        <rect
          fill="#2ebd59"
          height={15.670103092783506}
          width={2.55}
          x={87.26632653061223}
          y={64.3298969072165}
        />
        <rect
          fill="#2ebd59"
          height={29.690721649484537}
          width={2.55}
          x={90.27551020408163}
          y={50.30927835051546}
        />
        <rect
          fill="#2ebd59"
          height={59.381443298969074}
          width={2.55}
          x={93.284693877551}
          y={20.618556701030926}
        />
        <rect
          fill="#2ebd59"
          height={17.319587628865982}
          width={2.55}
          x={96.2938775510204}
          y={62.68041237113402}
        />
        <rect
          fill="#2ebd59"
          height={47.01030927835052}
          width={2.55}
          x={99.3030612244898}
          y={32.98969072164948}
        />
        <rect
          fill="#2ebd59"
          height={79.17525773195877}
          width={2.55}
          x={102.31224489795918}
          y={0.8247422680412342}
        />
        <rect
          fill="#2ebd59"
          height={75.87628865979381}
          width={2.55}
          x={105.32142857142857}
          y={4.123711340206185}
        />
        <rect
          fill="#2ebd59"
          height={41.23711340206185}
          width={2.55}
          x={108.33061224489795}
          y={38.76288659793815}
        />
        <rect
          fill="#2ebd59"
          height={74.22680412371135}
          width={2.55}
          x={111.33979591836734}
          y={5.7731958762886535}
        />
        <rect
          fill="#2ebd59"
          height={24.74226804123711}
          width={2.55}
          x={114.34897959183672}
          y={55.25773195876289}
        />
        <rect
          fill="#2ebd59"
          height={60.20618556701031}
          width={2.55}
          x={117.35816326530612}
          y={19.79381443298969}
        />
        <rect
          fill="#2ebd59"
          height={32.16494845360825}
          width={2.55}
          x={120.3673469387755}
          y={47.83505154639175}
        />
        <rect
          fill="#2ebd59"
          height={51.95876288659794}
          width={2.55}
          x={123.37653061224489}
          y={28.04123711340206}
        />
        <rect
          fill="#2ebd59"
          height={13.19587628865979}
          width={2.55}
          x={126.38571428571427}
          y={66.80412371134021}
        />
        <rect
          fill="#2ebd59"
          height={70.9278350515464}
          width={2.55}
          x={129.39489795918365}
          y={9.072164948453604}
        />
        <rect
          fill="#2ebd59"
          height={70.10309278350516}
          width={2.55}
          x={132.40408163265306}
          y={9.896907216494839}
        />
        <rect
          fill="#2ebd59"
          height={31.340206185567013}
          width={2.55}
          x={135.41326530612244}
          y={48.65979381443299}
        />
        <rect
          fill="#2ebd59"
          height={65.97938144329896}
          width={2.55}
          x={138.42244897959182}
          y={14.020618556701038}
        />
        <rect
          fill="#2ebd59"
          height={9.896907216494839}
          width={2.55}
          x={141.4316326530612}
          y={70.10309278350516}
        />
        <rect
          fill="#2ebd59"
          height={34.639175257731964}
          width={2.55}
          x={144.4408163265306}
          y={45.360824742268036}
        />
        <rect
          fill="#2ebd59"
          height={5.7731958762886535}
          width={2.55}
          x={147.45}
          y={74.22680412371135}
        />
      </g>
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,66.80412371134021L3.061224489795918,47.83505154639175L6.122448979591836,27.216494845360828L9.183673469387754,73.4020618556701L12.244897959183673,14.845360824742272L15.306122448979592,11.546391752577321L18.36734693877551,22.2680412371134L21.428571428571427,54.432989690721655L24.489795918367346,65.97938144329896L27.551020408163268,20.618556701030926L30.612244897959183,40.41237113402062L33.673469387755105,23.092783505154635L36.73469387755102,26.391752577319593L39.79591836734694,13.19587628865979L42.857142857142854,4.948453608247419L45.91836734693878,38.76288659793815L48.97959183673469,1.6494845360824826L52.04081632653061,0.8247422680412342L55.102040816326536,47.01030927835052L58.16326530612245,50.30927835051546L61.224489795918366,5.7731958762886535L64.28571428571428,59.381443298969074L67.34693877551021,14.845360824742272L70.40816326530613,30.51546391752577L73.46938775510203,46.18556701030928L76.53061224489797,64.3298969072165L79.59183673469389,0L82.65306122448979,41.23711340206186L85.71428571428571,51.134020618556704L88.77551020408163,64.3298969072165L91.83673469387756,50.30927835051546L94.89795918367348,20.618556701030926L97.95918367346938,62.68041237113402L101.0204081632653,32.98969072164948L104.08163265306122,0.8247422680412342L107.14285714285714,4.123711340206185L110.20408163265307,38.76288659793815L113.26530612244898,5.7731958762886535L116.3265306122449,55.25773195876289L119.38775510204081,19.79381443298969L122.44897959183673,47.83505154639175L125.51020408163266,28.04123711340206L128.57142857142856,66.80412371134021L131.6326530612245,9.072164948453604L134.69387755102042,9.896907216494839L137.75510204081633,48.65979381443299L140.81632653061226,14.020618556701038L143.87755102040816,70.10309278350516L146.93877551020407,45.360824742268036L150,74.22680412371135L150,90L146.93877551020407,90L143.87755102040816,90L140.81632653061226,90L137.75510204081633,90L134.69387755102042,90L131.6326530612245,90L128.57142857142856,90L125.51020408163266,90L122.44897959183673,90L119.38775510204081,90L116.3265306122449,90L113.26530612244898,90L110.20408163265307,90L107.14285714285714,90L104.08163265306122,90L101.0204081632653,90L97.95918367346938,90L94.89795918367348,90L91.83673469387756,90L88.77551020408163,90L85.71428571428571,90L82.65306122448979,90L79.59183673469389,90L76.53061224489797,90L73.46938775510203,90L70.40816326530613,90L67.34693877551021,90L64.28571428571428,90L61.224489795918366,90L58.16326530612245,90L55.102040816326536,90L52.04081632653061,90L48.97959183673469,90L45.91836734693878,90L42.857142857142854,90L39.79591836734694,90L36.73469387755102,90L33.673469387755105,90L30.612244897959183,90L27.551020408163268,90L24.489795918367346,90L21.428571428571427,90L18.36734693877551,90L15.306122448979592,90L12.244897959183673,90L9.183673469387754,90L6.122448979591836,90L3.061224489795918,90L0,90Z"
        fill="#2ebd59"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,66.80412371134021L3.061224489795918,47.83505154639175L6.122448979591836,27.216494845360828L9.183673469387754,73.4020618556701L12.244897959183673,14.845360824742272L15.306122448979592,11.546391752577321L18.36734693877551,22.2680412371134L21.428571428571427,54.432989690721655L24.489795918367346,65.97938144329896L27.551020408163268,20.618556701030926L30.612244897959183,40.41237113402062L33.673469387755105,23.092783505154635L36.73469387755102,26.391752577319593L39.79591836734694,13.19587628865979L42.857142857142854,4.948453608247419L45.91836734693878,38.76288659793815L48.97959183673469,1.6494845360824826L52.04081632653061,0.8247422680412342L55.102040816326536,47.01030927835052L58.16326530612245,50.30927835051546L61.224489795918366,5.7731958762886535L64.28571428571428,59.381443298969074L67.34693877551021,14.845360824742272L70.40816326530613,30.51546391752577L73.46938775510203,46.18556701030928L76.53061224489797,64.3298969072165L79.59183673469389,0L82.65306122448979,41.23711340206186L85.71428571428571,51.134020618556704L88.77551020408163,64.3298969072165L91.83673469387756,50.30927835051546L94.89795918367348,20.618556701030926L97.95918367346938,62.68041237113402L101.0204081632653,32.98969072164948L104.08163265306122,0.8247422680412342L107.14285714285714,4.123711340206185L110.20408163265307,38.76288659793815L113.26530612244898,5.7731958762886535L116.3265306122449,55.25773195876289L119.38775510204081,19.79381443298969L122.44897959183673,47.83505154639175L125.51020408163266,28.04123711340206L128.57142857142856,66.80412371134021L131.6326530612245,9.072164948453604L134.69387755102042,9.896907216494839L137.75510204081633,48.65979381443299L140.81632653061226,14.020618556701038L143.87755102040816,70.10309278350516L146.93877551020407,45.360824742268036L150,74.22680412371135"
        fill="none"
        stroke="#2ebd59"
        strokeWidth="1.3"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <circle
          cx={0}
          cy={66.80412371134021}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={3.061224489795918}
          cy={47.83505154639175}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={6.122448979591836}
          cy={27.216494845360828}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={9.183673469387754}
          cy={73.4020618556701}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={12.244897959183673}
          cy={14.845360824742272}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={15.306122448979592}
          cy={11.546391752577321}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={18.36734693877551}
          cy={22.2680412371134}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={21.428571428571427}
          cy={54.432989690721655}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={24.489795918367346}
          cy={65.97938144329896}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={27.551020408163268}
          cy={20.618556701030926}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={30.612244897959183}
          cy={40.41237113402062}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={33.673469387755105}
          cy={23.092783505154635}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={36.73469387755102}
          cy={26.391752577319593}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={39.79591836734694}
          cy={13.19587628865979}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={42.857142857142854}
          cy={4.948453608247419}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={45.91836734693878}
          cy={38.76288659793815}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={48.97959183673469}
          cy={1.6494845360824826}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={52.04081632653061}
          cy={0.8247422680412342}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={55.102040816326536}
          cy={47.01030927835052}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={58.16326530612245}
          cy={50.30927835051546}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={61.224489795918366}
          cy={5.7731958762886535}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={64.28571428571428}
          cy={59.381443298969074}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={67.34693877551021}
          cy={14.845360824742272}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={70.40816326530613}
          cy={30.51546391752577}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={73.46938775510203}
          cy={46.18556701030928}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={76.53061224489797}
          cy={64.3298969072165}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={79.59183673469389}
          cy={0}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={82.65306122448979}
          cy={41.23711340206186}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={85.71428571428571}
          cy={51.134020618556704}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={88.77551020408163}
          cy={64.3298969072165}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={91.83673469387756}
          cy={50.30927835051546}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={94.89795918367348}
          cy={20.618556701030926}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={97.95918367346938}
          cy={62.68041237113402}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={101.0204081632653}
          cy={32.98969072164948}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={104.08163265306122}
          cy={0.8247422680412342}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={107.14285714285714}
          cy={4.123711340206185}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={110.20408163265307}
          cy={38.76288659793815}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={113.26530612244898}
          cy={5.7731958762886535}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={116.3265306122449}
          cy={55.25773195876289}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={119.38775510204081}
          cy={19.79381443298969}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={122.44897959183673}
          cy={47.83505154639175}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={125.51020408163266}
          cy={28.04123711340206}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={128.57142857142856}
          cy={66.80412371134021}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={131.6326530612245}
          cy={9.072164948453604}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={134.69387755102042}
          cy={9.896907216494839}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={137.75510204081633}
          cy={48.65979381443299}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={140.81632653061226}
          cy={14.020618556701038}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={143.87755102040816}
          cy={70.10309278350516}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={146.93877551020407}
          cy={45.360824742268036}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={150}
          cy={74.22680412371135}
          fill="#2ebd59"
          r="3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots SuperSpark 50 large 1`] = `
<div>
  <svg
    height="500"
    style={
      Object {
        "display": "block",
      }
    }
    width="800"
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <rect
          fill="#2ebd59"
          height={80.82474226804123}
          width={13.43}
          x={0}
          y={409.17525773195877}
        />
        <rect
          fill="#2ebd59"
          height={197.01030927835052}
          width={13.43}
          x={15.848367346938776}
          y={292.9896907216495}
        />
        <rect
          fill="#2ebd59"
          height={323.29896907216494}
          width={13.43}
          x={31.696734693877552}
          y={166.70103092783506}
        />
        <rect
          fill="#2ebd59"
          height={40.412371134020646}
          width={13.43}
          x={47.54510204081633}
          y={449.58762886597935}
        />
        <rect
          fill="#2ebd59"
          height={399.07216494845363}
          width={13.43}
          x={63.393469387755104}
          y={90.92783505154637}
        />
        <rect
          fill="#2ebd59"
          height={419.2783505154639}
          width={13.43}
          x={79.24183673469388}
          y={70.7216494845361}
        />
        <rect
          fill="#2ebd59"
          height={353.6082474226804}
          width={13.43}
          x={95.09020408163266}
          y={136.3917525773196}
        />
        <rect
          fill="#2ebd59"
          height={156.59793814432987}
          width={13.43}
          x={110.93857142857144}
          y={333.4020618556701}
        />
        <rect
          fill="#2ebd59"
          height={85.87628865979383}
          width={13.43}
          x={126.78693877551021}
          y={404.12371134020617}
        />
        <rect
          fill="#2ebd59"
          height={363.7113402061856}
          width={13.43}
          x={142.63530612244898}
          y={126.28865979381442}
        />
        <rect
          fill="#2ebd59"
          height={242.47422680412373}
          width={13.43}
          x={158.48367346938775}
          y={247.52577319587627}
        />
        <rect
          fill="#2ebd59"
          height={348.55670103092785}
          width={13.43}
          x={174.33204081632653}
          y={141.44329896907215}
        />
        <rect
          fill="#2ebd59"
          height={328.3505154639175}
          width={13.43}
          x={190.18040816326533}
          y={161.64948453608253}
        />
        <rect
          fill="#2ebd59"
          height={409.17525773195877}
          width={13.43}
          x={206.0287755102041}
          y={80.82474226804123}
        />
        <rect
          fill="#2ebd59"
          height={459.69072164948454}
          width={13.43}
          x={221.87714285714287}
          y={30.309278350515456}
        />
        <rect
          fill="#2ebd59"
          height={252.57731958762884}
          width={13.43}
          x={237.72551020408164}
          y={237.42268041237116}
        />
        <rect
          fill="#2ebd59"
          height={479.8969072164948}
          width={13.43}
          x={253.57387755102042}
          y={10.10309278350519}
        />
        <rect
          fill="#2ebd59"
          height={484.94845360824746}
          width={13.43}
          x={269.4222448979592}
          y={5.051546391752538}
        />
        <rect
          fill="#2ebd59"
          height={202.0618556701031}
          width={13.43}
          x={285.27061224489796}
          y={287.9381443298969}
        />
        <rect
          fill="#2ebd59"
          height={181.8556701030928}
          width={13.43}
          x={301.11897959183676}
          y={308.1443298969072}
        />
        <rect
          fill="#2ebd59"
          height={454.63917525773195}
          width={13.43}
          x={316.9673469387755}
          y={35.36082474226805}
        />
        <rect
          fill="#2ebd59"
          height={126.28865979381442}
          width={13.43}
          x={332.8157142857143}
          y={363.7113402061856}
        />
        <rect
          fill="#2ebd59"
          height={399.07216494845363}
          width={13.43}
          x={348.66408163265305}
          y={90.92783505154637}
        />
        <rect
          fill="#2ebd59"
          height={303.09278350515467}
          width={13.43}
          x={364.51244897959185}
          y={186.90721649484533}
        />
        <rect
          fill="#2ebd59"
          height={207.1134020618557}
          width={13.43}
          x={380.36081632653065}
          y={282.8865979381443}
        />
        <rect
          fill="#2ebd59"
          height={95.97938144329896}
          width={13.43}
          x={396.2091836734694}
          y={394.02061855670104}
        />
        <rect
          fill="#2ebd59"
          height={490}
          width={13.43}
          x={412.0575510204082}
          y={0}
        />
        <rect
          fill="#2ebd59"
          height={237.42268041237114}
          width={13.43}
          x={427.90591836734694}
          y={252.57731958762886}
        />
        <rect
          fill="#2ebd59"
          height={176.8041237113402}
          width={13.43}
          x={443.75428571428574}
          y={313.1958762886598}
        />
        <rect
          fill="#2ebd59"
          height={95.97938144329896}
          width={13.43}
          x={459.6026530612245}
          y={394.02061855670104}
        />
        <rect
          fill="#2ebd59"
          height={181.8556701030928}
          width={13.43}
          x={475.4510204081633}
          y={308.1443298969072}
        />
        <rect
          fill="#2ebd59"
          height={363.7113402061856}
          width={13.43}
          x={491.29938775510203}
          y={126.28865979381442}
        />
        <rect
          fill="#2ebd59"
          height={106.08247422680415}
          width={13.43}
          x={507.14775510204083}
          y={383.91752577319585}
        />
        <rect
          fill="#2ebd59"
          height={287.93814432989694}
          width={13.43}
          x={522.9961224489796}
          y={202.06185567010306}
        />
        <rect
          fill="#2ebd59"
          height={484.94845360824746}
          width={13.43}
          x={538.8444897959184}
          y={5.051546391752538}
        />
        <rect
          fill="#2ebd59"
          height={464.7422680412371}
          width={13.43}
          x={554.6928571428572}
          y={25.257731958762918}
        />
        <rect
          fill="#2ebd59"
          height={252.57731958762884}
          width={13.43}
          x={570.5412244897959}
          y={237.42268041237116}
        />
        <rect
          fill="#2ebd59"
          height={454.63917525773195}
          width={13.43}
          x={586.3895918367347}
          y={35.36082474226805}
        />
        <rect
          fill="#2ebd59"
          height={151.54639175257734}
          width={13.43}
          x={602.2379591836735}
          y={338.45360824742266}
        />
        <rect
          fill="#2ebd59"
          height={368.7628865979381}
          width={13.43}
          x={618.0863265306123}
          y={121.23711340206188}
        />
        <rect
          fill="#2ebd59"
          height={197.01030927835052}
          width={13.43}
          x={633.934693877551}
          y={292.9896907216495}
        />
        <rect
          fill="#2ebd59"
          height={318.2474226804124}
          width={13.43}
          x={649.7830612244899}
          y={171.7525773195876}
        />
        <rect
          fill="#2ebd59"
          height={80.82474226804123}
          width={13.43}
          x={665.6314285714286}
          y={409.17525773195877}
        />
        <rect
          fill="#2ebd59"
          height={434.4329896907216}
          width={13.43}
          x={681.4797959183674}
          y={55.56701030927837}
        />
        <rect
          fill="#2ebd59"
          height={429.3814432989691}
          width={13.43}
          x={697.3281632653061}
          y={60.61855670103091}
        />
        <rect
          fill="#2ebd59"
          height={191.95876288659792}
          width={13.43}
          x={713.176530612245}
          y={298.0412371134021}
        />
        <rect
          fill="#2ebd59"
          height={404.12371134020617}
          width={13.43}
          x={729.0248979591837}
          y={85.87628865979383}
        />
        <rect
          fill="#2ebd59"
          height={60.61855670103091}
          width={13.43}
          x={744.8732653061224}
          y={429.3814432989691}
        />
        <rect
          fill="#2ebd59"
          height={212.16494845360825}
          width={13.43}
          x={760.7216326530613}
          y={277.83505154639175}
        />
        <rect
          fill="#2ebd59"
          height={35.36082474226805}
          width={13.43}
          x={776.57}
          y={454.63917525773195}
        />
      </g>
    </g>
  </svg>
  <svg
    height="500"
    style={
      Object {
        "display": "block",
      }
    }
    width="800"
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,409.17525773195877L16.122448979591834,292.9896907216495L32.24489795918367,166.70103092783506L48.36734693877551,449.58762886597935L64.48979591836734,90.92783505154637L80.61224489795919,70.7216494845361L96.73469387755102,136.3917525773196L112.85714285714285,333.4020618556701L128.97959183673467,404.12371134020617L145.10204081632654,126.28865979381442L161.22448979591837,247.52577319587627L177.3469387755102,141.44329896907215L193.46938775510205,161.64948453608253L209.59183673469389,80.82474226804123L225.7142857142857,30.309278350515456L241.83673469387756,237.42268041237116L257.95918367346934,10.10309278350519L274.0816326530612,5.051546391752538L290.2040816326531,287.9381443298969L306.3265306122449,308.1443298969072L322.44897959183675,35.36082474226805L338.57142857142856,363.7113402061856L354.6938775510204,90.92783505154637L370.8163265306123,186.90721649484533L386.9387755102041,282.8865979381443L403.0612244897959,394.02061855670104L419.18367346938777,0L435.3061224489795,252.57731958762886L451.4285714285714,313.1958762886598L467.55102040816325,394.02061855670104L483.6734693877551,308.1443298969072L499.795918367347,126.28865979381442L515.9183673469387,383.91752577319585L532.0408163265306,202.06185567010306L548.1632653061224,5.051546391752538L564.2857142857143,25.257731958762918L580.4081632653061,237.42268041237116L596.530612244898,35.36082474226805L612.6530612244898,338.45360824742266L628.7755102040817,121.23711340206188L644.8979591836735,292.9896907216495L661.0204081632653,171.7525773195876L677.1428571428571,409.17525773195877L693.2653061224489,55.56701030927837L709.3877551020408,60.61855670103091L725.5102040816327,298.0412371134021L741.6326530612246,85.87628865979383L757.7551020408163,429.3814432989691L773.8775510204082,277.83505154639175L790,454.63917525773195L790,500L773.8775510204082,500L757.7551020408163,500L741.6326530612246,500L725.5102040816327,500L709.3877551020408,500L693.2653061224489,500L677.1428571428571,500L661.0204081632653,500L644.8979591836735,500L628.7755102040817,500L612.6530612244898,500L596.530612244898,500L580.4081632653061,500L564.2857142857143,500L548.1632653061224,500L532.0408163265306,500L515.9183673469387,500L499.795918367347,500L483.6734693877551,500L467.55102040816325,500L451.4285714285714,500L435.3061224489795,500L419.18367346938777,500L403.0612244897959,500L386.9387755102041,500L370.8163265306123,500L354.6938775510204,500L338.57142857142856,500L322.44897959183675,500L306.3265306122449,500L290.2040816326531,500L274.0816326530612,500L257.95918367346934,500L241.83673469387756,500L225.7142857142857,500L209.59183673469389,500L193.46938775510205,500L177.3469387755102,500L161.22448979591837,500L145.10204081632654,500L128.97959183673467,500L112.85714285714285,500L96.73469387755102,500L80.61224489795919,500L64.48979591836734,500L48.36734693877551,500L32.24489795918367,500L16.122448979591834,500L0,500Z"
        fill="#2ebd59"
      />
    </g>
  </svg>
  <svg
    height="500"
    style={
      Object {
        "display": "block",
      }
    }
    width="800"
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,409.17525773195877L16.122448979591834,292.9896907216495L32.24489795918367,166.70103092783506L48.36734693877551,449.58762886597935L64.48979591836734,90.92783505154637L80.61224489795919,70.7216494845361L96.73469387755102,136.3917525773196L112.85714285714285,333.4020618556701L128.97959183673467,404.12371134020617L145.10204081632654,126.28865979381442L161.22448979591837,247.52577319587627L177.3469387755102,141.44329896907215L193.46938775510205,161.64948453608253L209.59183673469389,80.82474226804123L225.7142857142857,30.309278350515456L241.83673469387756,237.42268041237116L257.95918367346934,10.10309278350519L274.0816326530612,5.051546391752538L290.2040816326531,287.9381443298969L306.3265306122449,308.1443298969072L322.44897959183675,35.36082474226805L338.57142857142856,363.7113402061856L354.6938775510204,90.92783505154637L370.8163265306123,186.90721649484533L386.9387755102041,282.8865979381443L403.0612244897959,394.02061855670104L419.18367346938777,0L435.3061224489795,252.57731958762886L451.4285714285714,313.1958762886598L467.55102040816325,394.02061855670104L483.6734693877551,308.1443298969072L499.795918367347,126.28865979381442L515.9183673469387,383.91752577319585L532.0408163265306,202.06185567010306L548.1632653061224,5.051546391752538L564.2857142857143,25.257731958762918L580.4081632653061,237.42268041237116L596.530612244898,35.36082474226805L612.6530612244898,338.45360824742266L628.7755102040817,121.23711340206188L644.8979591836735,292.9896907216495L661.0204081632653,171.7525773195876L677.1428571428571,409.17525773195877L693.2653061224489,55.56701030927837L709.3877551020408,60.61855670103091L725.5102040816327,298.0412371134021L741.6326530612246,85.87628865979383L757.7551020408163,429.3814432989691L773.8775510204082,277.83505154639175L790,454.63917525773195"
        fill="none"
        stroke="#2ebd59"
        strokeWidth="1.3"
      />
    </g>
  </svg>
  <svg
    height="500"
    style={
      Object {
        "display": "block",
      }
    }
    width="800"
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <circle
          cx={0}
          cy={409.17525773195877}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={16.122448979591834}
          cy={292.9896907216495}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={32.24489795918367}
          cy={166.70103092783506}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={48.36734693877551}
          cy={449.58762886597935}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={64.48979591836734}
          cy={90.92783505154637}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={80.61224489795919}
          cy={70.7216494845361}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={96.73469387755102}
          cy={136.3917525773196}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={112.85714285714285}
          cy={333.4020618556701}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={128.97959183673467}
          cy={404.12371134020617}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={145.10204081632654}
          cy={126.28865979381442}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={161.22448979591837}
          cy={247.52577319587627}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={177.3469387755102}
          cy={141.44329896907215}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={193.46938775510205}
          cy={161.64948453608253}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={209.59183673469389}
          cy={80.82474226804123}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={225.7142857142857}
          cy={30.309278350515456}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={241.83673469387756}
          cy={237.42268041237116}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={257.95918367346934}
          cy={10.10309278350519}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={274.0816326530612}
          cy={5.051546391752538}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={290.2040816326531}
          cy={287.9381443298969}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={306.3265306122449}
          cy={308.1443298969072}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={322.44897959183675}
          cy={35.36082474226805}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={338.57142857142856}
          cy={363.7113402061856}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={354.6938775510204}
          cy={90.92783505154637}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={370.8163265306123}
          cy={186.90721649484533}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={386.9387755102041}
          cy={282.8865979381443}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={403.0612244897959}
          cy={394.02061855670104}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={419.18367346938777}
          cy={0}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={435.3061224489795}
          cy={252.57731958762886}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={451.4285714285714}
          cy={313.1958762886598}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={467.55102040816325}
          cy={394.02061855670104}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={483.6734693877551}
          cy={308.1443298969072}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={499.795918367347}
          cy={126.28865979381442}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={515.9183673469387}
          cy={383.91752577319585}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={532.0408163265306}
          cy={202.06185567010306}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={548.1632653061224}
          cy={5.051546391752538}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={564.2857142857143}
          cy={25.257731958762918}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={580.4081632653061}
          cy={237.42268041237116}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={596.530612244898}
          cy={35.36082474226805}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={612.6530612244898}
          cy={338.45360824742266}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={628.7755102040817}
          cy={121.23711340206188}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={644.8979591836735}
          cy={292.9896907216495}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={661.0204081632653}
          cy={171.7525773195876}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={677.1428571428571}
          cy={409.17525773195877}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={693.2653061224489}
          cy={55.56701030927837}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={709.3877551020408}
          cy={60.61855670103091}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={725.5102040816327}
          cy={298.0412371134021}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={741.6326530612246}
          cy={85.87628865979383}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={757.7551020408163}
          cy={429.3814432989691}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={773.8775510204082}
          cy={277.83505154639175}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={790}
          cy={454.63917525773195}
          fill="#2ebd59"
          r="3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots SuperSpark Coral color 1`] = `
<div>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <rect
          fill="coral"
          height={50.023492560689114}
          width={9.807692307692308}
          x={0}
          y={29.976507439310886}
        />
        <rect
          fill="coral"
          height={51.996867658574786}
          width={9.807692307692308}
          x={11.682692307692308}
          y={28.003132341425214}
        />
        <rect
          fill="coral"
          height={52.09083790133125}
          width={9.807692307692308}
          x={23.365384615384617}
          y={27.90916209866875}
        />
        <rect
          fill="coral"
          height={51.37039937353172}
          width={9.807692307692308}
          x={35.04807692307693}
          y={28.62960062646828}
        />
        <rect
          fill="coral"
          height={68.59827721221613}
          width={9.807692307692308}
          x={46.73076923076923}
          y={11.401722787783868}
        />
        <rect
          fill="coral"
          height={73.35943617854346}
          width={9.807692307692308}
          x={58.41346153846154}
          y={6.640563821456539}
        />
        <rect
          fill="coral"
          height={74.23649177760376}
          width={9.807692307692308}
          x={70.09615384615385}
          y={5.76350822239624}
        />
        <rect
          fill="coral"
          height={80}
          width={9.807692307692308}
          x={81.77884615384616}
          y={0}
        />
        <rect
          fill="coral"
          height={74.48707909162098}
          width={9.807692307692308}
          x={93.46153846153847}
          y={5.512920908379016}
        />
        <rect
          fill="coral"
          height={70.25841816758026}
          width={9.807692307692308}
          x={105.14423076923077}
          y={9.74158183241974}
        />
        <rect
          fill="coral"
          height={73.79796397807361}
          width={9.807692307692308}
          x={116.82692307692308}
          y={6.202036021926389}
        />
        <rect
          fill="coral"
          height={77.7133907595928}
          width={9.807692307692308}
          x={128.5096153846154}
          y={2.286609240407202}
        />
        <rect
          fill="coral"
          height={32.16914643696163}
          width={9.807692307692308}
          x={140.1923076923077}
          y={47.83085356303837}
        />
      </g>
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,29.976507439310886L12.5,28.003132341425214L25,27.90916209866875L37.5,28.62960062646828L50,11.401722787783868L62.5,6.640563821456539L75,5.76350822239624L87.5,0L100,5.512920908379016L112.5,9.74158183241974L125,6.202036021926389L137.5,2.286609240407202L150,47.83085356303837L150,90L137.5,90L125,90L112.5,90L100,90L87.5,90L75,90L62.5,90L50,90L37.5,90L25,90L12.5,90L0,90Z"
        fill="coral"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,29.976507439310886L12.5,28.003132341425214L25,27.90916209866875L37.5,28.62960062646828L50,11.401722787783868L62.5,6.640563821456539L75,5.76350822239624L87.5,0L100,5.512920908379016L112.5,9.74158183241974L125,6.202036021926389L137.5,2.286609240407202L150,47.83085356303837"
        fill="none"
        stroke="coral"
        strokeWidth="1.3"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <circle
          cx={0}
          cy={29.976507439310886}
          fill="coral"
          r="3"
        />
        <circle
          cx={12.5}
          cy={28.003132341425214}
          fill="coral"
          r="3"
        />
        <circle
          cx={25}
          cy={27.90916209866875}
          fill="coral"
          r="3"
        />
        <circle
          cx={37.5}
          cy={28.62960062646828}
          fill="coral"
          r="3"
        />
        <circle
          cx={50}
          cy={11.401722787783868}
          fill="coral"
          r="3"
        />
        <circle
          cx={62.5}
          cy={6.640563821456539}
          fill="coral"
          r="3"
        />
        <circle
          cx={75}
          cy={5.76350822239624}
          fill="coral"
          r="3"
        />
        <circle
          cx={87.5}
          cy={0}
          fill="coral"
          r="3"
        />
        <circle
          cx={100}
          cy={5.512920908379016}
          fill="coral"
          r="3"
        />
        <circle
          cx={112.5}
          cy={9.74158183241974}
          fill="coral"
          r="3"
        />
        <circle
          cx={125}
          cy={6.202036021926389}
          fill="coral"
          r="3"
        />
        <circle
          cx={137.5}
          cy={2.286609240407202}
          fill="coral"
          r="3"
        />
        <circle
          cx={150}
          cy={47.83085356303837}
          fill="coral"
          r="3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots SuperSpark Empty array 1`] = `
<div>
  <svg />
  <svg />
  <svg />
  <svg />
</div>
`;

exports[`Storyshots SuperSpark No props 1`] = `
<div>
  <svg />
  <svg />
  <svg />
  <svg />
</div>
`;

exports[`Storyshots SuperSpark Pass regular data 1`] = `
<div>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <rect
          fill="#2ebd59"
          height={50.023492560689114}
          width={9.807692307692308}
          x={0}
          y={29.976507439310886}
        />
        <rect
          fill="#2ebd59"
          height={51.996867658574786}
          width={9.807692307692308}
          x={11.682692307692308}
          y={28.003132341425214}
        />
        <rect
          fill="#2ebd59"
          height={52.09083790133125}
          width={9.807692307692308}
          x={23.365384615384617}
          y={27.90916209866875}
        />
        <rect
          fill="#2ebd59"
          height={51.37039937353172}
          width={9.807692307692308}
          x={35.04807692307693}
          y={28.62960062646828}
        />
        <rect
          fill="#2ebd59"
          height={68.59827721221613}
          width={9.807692307692308}
          x={46.73076923076923}
          y={11.401722787783868}
        />
        <rect
          fill="#2ebd59"
          height={73.35943617854346}
          width={9.807692307692308}
          x={58.41346153846154}
          y={6.640563821456539}
        />
        <rect
          fill="#2ebd59"
          height={74.23649177760376}
          width={9.807692307692308}
          x={70.09615384615385}
          y={5.76350822239624}
        />
        <rect
          fill="#2ebd59"
          height={80}
          width={9.807692307692308}
          x={81.77884615384616}
          y={0}
        />
        <rect
          fill="#2ebd59"
          height={74.48707909162098}
          width={9.807692307692308}
          x={93.46153846153847}
          y={5.512920908379016}
        />
        <rect
          fill="#2ebd59"
          height={70.25841816758026}
          width={9.807692307692308}
          x={105.14423076923077}
          y={9.74158183241974}
        />
        <rect
          fill="#2ebd59"
          height={73.79796397807361}
          width={9.807692307692308}
          x={116.82692307692308}
          y={6.202036021926389}
        />
        <rect
          fill="#2ebd59"
          height={77.7133907595928}
          width={9.807692307692308}
          x={128.5096153846154}
          y={2.286609240407202}
        />
        <rect
          fill="#2ebd59"
          height={32.16914643696163}
          width={9.807692307692308}
          x={140.1923076923077}
          y={47.83085356303837}
        />
      </g>
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,29.976507439310886L12.5,28.003132341425214L25,27.90916209866875L37.5,28.62960062646828L50,11.401722787783868L62.5,6.640563821456539L75,5.76350822239624L87.5,0L100,5.512920908379016L112.5,9.74158183241974L125,6.202036021926389L137.5,2.286609240407202L150,47.83085356303837L150,90L137.5,90L125,90L112.5,90L100,90L87.5,90L75,90L62.5,90L50,90L37.5,90L25,90L12.5,90L0,90Z"
        fill="#2ebd59"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,29.976507439310886L12.5,28.003132341425214L25,27.90916209866875L37.5,28.62960062646828L50,11.401722787783868L62.5,6.640563821456539L75,5.76350822239624L87.5,0L100,5.512920908379016L112.5,9.74158183241974L125,6.202036021926389L137.5,2.286609240407202L150,47.83085356303837"
        fill="none"
        stroke="#2ebd59"
        strokeWidth="1.3"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <circle
          cx={0}
          cy={29.976507439310886}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={12.5}
          cy={28.003132341425214}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={25}
          cy={27.90916209866875}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={37.5}
          cy={28.62960062646828}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={50}
          cy={11.401722787783868}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={62.5}
          cy={6.640563821456539}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={75}
          cy={5.76350822239624}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={87.5}
          cy={0}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={100}
          cy={5.512920908379016}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={112.5}
          cy={9.74158183241974}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={125}
          cy={6.202036021926389}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={137.5}
          cy={2.286609240407202}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={150}
          cy={47.83085356303837}
          fill="#2ebd59"
          r="3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots SuperSpark Two data points 1`] = `
<div>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <rect
          fill="#2ebd59"
          height={26.666666666666664}
          width={63.75}
          x={0}
          y={53.333333333333336}
        />
        <rect
          fill="#2ebd59"
          height={80}
          width={63.75}
          x={86.25}
          y={0}
        />
      </g>
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,53.333333333333336L150,0L150,90L0,90Z"
        fill="#2ebd59"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <path
        d="M0,53.333333333333336L150,0"
        fill="none"
        stroke="#2ebd59"
        strokeWidth="1.3"
      />
    </g>
  </svg>
  <svg
    height={90}
    style={
      Object {
        "display": "block",
      }
    }
    width={160}
  >
    <g
      style={
        Object {
          "transform": "translate(5px,5px)",
        }
      }
    >
      <g>
        <circle
          cx={0}
          cy={53.333333333333336}
          fill="#2ebd59"
          r="3"
        />
        <circle
          cx={150}
          cy={0}
          fill="#2ebd59"
          r="3"
        />
      </g>
    </g>
  </svg>
</div>
`;
